<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_screen">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent" android:layout_height="220dp"
        android:background="@drawable/bg_header">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/login_title" android:textSize="20sp"
            android:textColor="@color/white" android:layout_margin="20dp"
            android:layout_gravity="end|bottom"/>
    </FrameLayout>


    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@drawable/bg_input" android:padding="6dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="22dp" android:layout_height="22dp"
                android:src="@drawable/ic_email" android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/email" android:textColorHint="@color/hint"
                android:textColor="@color/text_dark" android:inputType="textEmailAddress"
                android:padding="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_input" android:padding="6dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="22dp" android:layout_height="22dp"
                android:src="@drawable/ic_key" android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/password" android:textColorHint="@color/hint"
                android:textColor="@color/text_dark" android:inputType="textPassword"
                android:padding="8dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/forgot" android:textColor="@color/text_dark"
            android:layout_gravity="end" android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent" android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:text="@string/btn_login" android:textColor="@color/white"
            android:background="@drawable/bg_btn_login"/>

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/no_acc" android:textColor="@color/text_dark"/>
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="  @string/register" android:textColor="@color/link"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
